2003-10-10  Bas Wijnen <b.wijnen@phys.rug.nl>
	* ai/client.c: Fixed AI naming bug.
	* client/gui.c: Made code nicer, fixed bugs.
	* client/robber.c: Fixed language bug.
	* client/theme.c: Made code nicer, fixed scaling bugs.

2003-10-03  Roland Clobus <rclobus@bigfoot.com>
	* client/gold.c: Cosmetic change for the Choose Gold dialog.

2003-10-03  Bas Wijnen <b.wijnen@phys.rug.nl>
	* server/player.c: Bugfix.
	* server/buildutil.c: Fixed bug #817465.
	* server/gold.c: Removed debugging statement.
	* client/gui.c: Inserted startsize patch (fixes bug #722641).

2003-10-03  Bas Wijnen <b.wijnen@phys.rug.nl>
	* server/player.c: Bugfix.

2003-10-01  Bas Wijnen <b.wijnen@phys.rug.nl>
	* ai/client.c, client/client.c, server/player.c, server/pregame.c,
	server/server.c, server/server.h: Changed protocol for sending initial
	player name.
	* ai/client.c, client/client.c, server/player.c: Added extensions to
	protocol, to allow future features without needing a minor version
	change (which would break compatibility).

2003-09-30  Bas Wijnen <b.wijnen@phys.rug.nl>
	* many files, didn't record which: Fixed const<->non-const warnings
	introduced by previous 2 patches.
	* client/theme.c: Bugfixes in scaling tiles.
	* client/guimap.c: Improved code.
	* client/gui.c: Fixed settings update bug.

2003-08-17  Jason Long  <jasonlong@users.sourceforge.net>
	* client/admin-gtk.c, client/connect.c, client/discard.c,
	client/gameover.c, client/gui.c, client/histogram.c,
	client/legend.c, client/monopoly.c, client/name.c,
	client/plenty.c, client/settingscreen.c: use GtkDialog
	instead of deprecated GnomeDialog

2003-08-17  Jason Long  <jasonlong@users.sourceforge.net>
	* configure.in: remove references to macros directory and
	add checks for Gnome2
	* client/Makefile.am, common/Makefile.am, server/Makefile.am,
	ai/Makefile.am, meta-server/Makefile.am:
	use GNOME2_CFLAGS and GNOME2_LIBS or GLIB2_LIBS for INCLUDES
	and LDADD
	* client/connect.c: don't destroy cserver_dlg a second time